Add swagger docs for /brother endpoints
