# docs/swagger.yaml
@@ -1,4 +1,283 @@
+definitions:
+  handlers.CreateBrotherStatus.RequestBody:
+    properties:
+      brotherID:
+        type: integer
+      semesterID:
+        type: integer
+      status:
+        type: string
+    type: object
+  handlers.GetBrotherStatusCount.SemesterCount:
+    properties:
+      count:
+        type: integer
+      semester:
+        type: string
+    type: object
+  models.APIResponse:
+    description: JSON response format for all API calls
+    properties:
+      data:
+        description: Omit if nil
+      message:
+        description: Omit if nil
+        type: string
+      status:
+        type: string
+    type: object
+  models.Brother:
+    description: Brother information
+    properties:
+      badStanding:
+        type: integer
+      brotherID:
+        description: Primary Key
+        type: integer
+      className:
+        type: string
+      email:
+        type: string
+      firstName:
+        type: string
+      lastName:
+        type: string
+      major:
+        type: string
+      phoneNumber:
+        type: string
+      rollCall:
+        type: integer
+      status:
+        type: string
+    required:
+    - firstName
+    - lastName
+    - major
+    - rollCall
+    - status
+    type: object
 info:
   contact: {}
-paths: {}
+paths:
+  /api/brothers:
+    get:
+      description: Get data from all Brother records in `Brothers` table
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.APIResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.Brother'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+      summary: Get all Brothers data
+      tags:
+      - Brothers
+    post:
+      description: Create a new Brother record row for `Brothers` table
+      parameters:
+      - description: Values for new record
+        in: body
+        name: body_params
+        required: true
+        schema:
+          $ref: '#/definitions/models.Brother'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+      summary: Create Brother record
+      tags:
+      - Brothers
+  /api/brothers/{id}:
+    delete:
+      description: Delete Brother with by Roll Call
+      parameters:
+      - description: RollCall of Brother
+        in: body
+        name: body_params
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+      summary: Delete Brother by Roll Call
+      tags:
+      - Brothers
+    get:
+      description: Get Brother record by ID
+      parameters:
+      - description: Brother ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+      summary: Get Brother record by ID
+      tags:
+      - Brothers
+    put:
+      description: Update one or more fields for Brother record
+      parameters:
+      - description: Values to update for Brother
+        in: body
+        name: body_params
+        required: true
+        schema:
+          $ref: '#/definitions/models.Brother'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+      summary: Update Brother record
+      tags:
+      - Brothers
+  /api/brothers/{id}/statuses:
+    get:
+      description: Get all status recorded for Brother
+      parameters:
+      - description: Brother ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+      summary: Get status history of a Brother
+      tags:
+      - Brothers
+    post:
+      consumes:
+      - application/json
+      description: Create a new status record for a Brother
+      parameters:
+      - description: Values for new record
+        in: body
+        name: body_params
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.CreateBrotherStatus.RequestBody'
+      - description: Brother ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIResponse'
+      summary: Create status record for Brother
+      tags:
+      - Brothers
+  /api/brothers/count:
+    get:
+      description: Get major distribution counts across all members
+      responses:
+        "200":
+          description: Success
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.APIResponse'
+            - properties:
+                data:
+                  type: integer
+              type: object
+        "400":
+          description: Error
+          schema:
+            type: string
+      summary: Get total Brothers count
+      tags:
+      - Brothers
+  /api/brothers/majors/count:
+    get:
+      description: Get major distribution counts across all members
+      responses:
+        "200":
+          description: desc
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.APIResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/handlers.GetBrotherStatusCount.SemesterCount'
+              type: object
+        "400":
+          description: error
+          schema:
+            type: string
+      summary: Get major counts
+      tags:
+      - Brothers
+  /api/brothers/statuses/count:
+    get:
+      description: Get status counts for all semesters
+      parameters:
+      - description: Status filter
+        in: query
+        name: status
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.APIResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/handlers.GetBrotherStatusCount.SemesterCount'
+              type: object
+        "400":
+          description: error
+          schema:
+            type: string
+      summary: Get status counts
+      tags:
+      - Brothers
 swagger: "2.0"
